stylesheets/style.css
/*

Personal Website
=============

Author:  Luis Vasquez

*/


/* --------------------------------------
   Layout
   -------------------------------------- */
#features {
	text-align: center;
}

#tyfti {
	text-align: left;
}

.navbar-header {
    text-align: center;
}

/* --------------------------------------
   Typography
   -------------------------------------- */

body {
   -webkit-font-smoothing: antialiased;
   text-rendering: optimizelegibility;

   padding-bottom: 100px;

}

/* --------------------------------------
   Navbar
   -------------------------------------- */

   
/* --------------------------------------
   Carousel
   -------------------------------------- */

/* --------------------------------------
   Global Styles
   -------------------------------------- */


/* --------------------------------------
   Media Queries
   -------------------------------------- */

/* Portrait & landscape phone */
@media (max-width: 480px) {
	
}

/* Landscape phone to portrait tablet */
@media (max-width: 768px) {
   
}

/* Large desktop */
@media (min-width: 1200px) {

	
}

